--- a/fuel_finder/pubspec.yaml
+++ b/fuel_finder/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cloud_firestore: ^4.9.1
+  firebase_core: ^2.15.1
+  firebase_database: ^10.2.5
+  firebase_storage: ^11.2.6
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
