--- a/fuel_finder/pubspec.yaml
+++ b/fuel_finder/pubspec.yaml
@@ -31,10 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_auth: ^4.9.0
   cloud_firestore: ^4.9.1
   firebase_core: ^2.15.1
   firebase_database: ^10.2.5
   firebase_storage: ^11.2.6
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
