--- a/fuel_finder/pubspec.yaml
+++ b/fuel_finder/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_database: ^10.2.5
   firebase_storage: ^11.2.6
   provider: ^6.0.5
+  image_picker: ^1.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
