--- a/fuel_finder/pubspec.yaml
+++ b/fuel_finder/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   firebase_storage: ^11.2.6
   provider: ^6.0.5
   image_picker: ^1.0.4
+  google_maps_flutter: ^2.0.1
+  geolocator: ^9.0.1
+  flutter_google_places: ^0.3.0
+  awesome_snackbar_content: ^0.0.8
+  http: ^0.13.4
+  google_maps_directions: 0.0.3+4
+  flutter_statusbarcolor_ns: ^0.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -67,8 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/fuel_station.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
