--- a/fuel_finder/pubspec.yaml
+++ b/fuel_finder/pubspec.yaml
@@ -75,7 +75,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/fuel_station.png
+    - assets/images/
+  #   - assets/images/fuel_station.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
