--- a/fuel_finder/pubspec.yaml
+++ b/fuel_finder/pubspec.yaml
@@ -36,6 +36,18 @@ dependencies:
   firebase_database: ^10.2.5
   firebase_storage: ^11.2.6
 
+  line_icons: ^2.0.3
+  cached_network_image: ^3.3.0
+  flutter_svg: ^2.0.7
+  flutter_rating_bar: ^4.0.1
+
+  get: ^4.6.6
+  firebase_auth: ^4.11.1
+  get_storage: ^2.1.1
+  intl: ^0.18.1
+  image_picker: ^1.0.4
+  like_button: ^2.0.5
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +79,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
